2014-02-10  Kirill Yukhin  <kirill.yukhin@intel.com>
	    Ilya Tocar  <ilya.tocar@intel.com>

	* config/i386/avx512fintrin.h (_mm512_storeu_epi64): Removed.
	(_mm512_loadu_epi32): Renamed into...
	(_mm512_loadu_si512): This.
	(_mm512_storeu_epi32): Renamed into...
	(_mm512_storeu_si512): This.
	(_mm512_maskz_ceil_ps): Removed.
	(_mm512_maskz_ceil_pd): Ditto.
	(_mm512_maskz_floor_ps): Ditto.
	(_mm512_maskz_floor_pd): Ditto.
	(_mm512_floor_round_ps): Ditto.
	(_mm512_floor_round_pd): Ditto.
	(_mm512_ceil_round_ps): Ditto.
	(_mm512_ceil_round_pd): Ditto.
	(_mm512_mask_floor_round_ps): Ditto.
	(_mm512_mask_floor_round_pd): Ditto.
	(_mm512_mask_ceil_round_ps): Ditto.
	(_mm512_mask_ceil_round_pd): Ditto.
	(_mm512_maskz_floor_round_ps): Ditto.
	(_mm512_maskz_floor_round_pd): Ditto.
	(_mm512_maskz_ceil_round_ps): Ditto.
	(_mm512_maskz_ceil_round_pd): Ditto.
	(_mm512_expand_pd): Ditto.
	(_mm512_expand_ps): Ditto.
	* config/i386/i386.c (ix86_builtins): Remove
	IX86_BUILTIN_EXPANDPD512_NOMASK, IX86_BUILTIN_EXPANDPS512_NOMASK.
	(bdesc_args): Ditto.
	* config/i386/predicates.md (const1256_operand): New.
	(const_1_to_2_operand): Ditto.
	* config/i386/sse.md (avx512pf_gatherpf<mode>sf): Change hint value.
	(*avx512pf_gatherpf<mode>sf_mask): Ditto.
	(*avx512pf_gatherpf<mode>sf): Ditto.
	(avx512pf_gatherpf<mode>df): Ditto.
	(*avx512pf_gatherpf<mode>df_mask): Ditto.
	(*avx512pf_gatherpf<mode>df): Ditto.
	(avx512pf_scatterpf<mode>sf): Ditto.
	(*avx512pf_scatterpf<mode>sf_mask): Ditto.
	(*avx512pf_scatterpf<mode>sf): Ditto.
	(avx512pf_scatterpf<mode>df): Ditto.
	(*avx512pf_scatterpf<mode>df_mask): Ditto.
	(*avx512pf_scatterpf<mode>df): Ditto.
	(avx512f_expand<mode>): Removed.
	(<shift_insn><mode>3<mask_name>): Change predicate type.

2014-02-08  Jakub Jelinek  <jakub@redhat.com>

	* tree-vect-data-refs.c (vect_analyze_data_refs): For clobbers
	not at the end of datarefs vector use ordered_remove to avoid
	reordering datarefs vector.

	PR c/59984